--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,8 +14,16 @@ a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+
+  @apply transition-all duration-500;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.lang--switcher {
+  @apply px-3 py-2 hover:text-white hover:bg-hover
+  transition-all duration-500 relative rounded;
+  @apply flex items-center gap-1 font-normal uppercase
 }
