update global.scss file

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,7 +20,7 @@ a {
 
 * {
   box-sizing: border-box;
-  @apply transition-all duration-500;
+  //@apply transition-all duration-500;
 }
 
 .lang--switcher {
