--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -1,5 +1,5 @@
 .collection--slider {
-  @apply mx-5 pt-8 pl-8 pb-8 bg-hover flex items-center gap-12 mb-12 rounded-md;
+  @apply mx-5 pt-8 pl-8 pb-8 bg-hover flex items-center gap-12 mb-12 rounded-xl;
 
   ._left {
     @apply w-72;
