--- a/src/styles/search-input.scss
+++ b/src/styles/search-input.scss
@@ -1,9 +1,9 @@
 .search--input {
-  @apply p-2 bg-hover w-[24rem] rounded-md flex items-center justify-between overflow-hidden relative block;
+  @apply p-2 bg-gray-200 dark:bg-hover w-[24rem] rounded-md flex items-center justify-between overflow-hidden relative block;
 
   &::before {
     content: "";
-    @apply border border-gray-700 absolute inset-0 pointer-events-none rounded-xl opacity-0 transition-all duration-300;
+    @apply border border-gray-300 dark:border-gray-700 absolute inset-0 pointer-events-none rounded-md opacity-0 transition-all duration-300;
   }
 
   &:hover {
@@ -13,7 +13,7 @@
   }
 
   input {
-    @apply bg-transparent outline-none flex-1 text-sm
+    @apply bg-transparent text-gray-700 dark:text-white outline-none flex-1 text-sm
   }
 
   input:focus & {
@@ -23,7 +23,7 @@
   }
 
   ._icon {
-    @apply bg-gray-600 rounded-md p-1 px-2.5 text-xs;
+    @apply bg-gray-300 dark:bg-gray-600 rounded-md p-1 px-2.5 text-xs;
   }
 }
 
@@ -31,7 +31,7 @@
   @apply block md:hidden;
 
   .btn--icon {
-    @apply px-2
+    @apply px-2 text-white;
   }
 
   ._search {
