global scss updated

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -67,7 +67,7 @@ a {
   @apply px-4 py-2 bg-primary border-2 border-primary rounded-xl text-sm text-white;
 
   &._bordered {
-    @apply border-2 text-black border-white bg-transparent hover:border-primary;
+    @apply border-2 dark:text-white text-black border-white bg-transparent hover:border-primary;
   }
 
   &._large {
