--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,8 @@
 @import "./search-input.scss";
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
+@import "./explore.scss";
+@import "./filters-panel.scss";
 
 .scroll-button {
 
