--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,5 @@
 ._footer {
-  @apply border-t border-t-hover pt-24;
+  @apply border-t dark:border-t-hover border-t-gray-300 pt-24;
 
   ._content {
 
